//! Bridge VajraEntropyMonitor ↔ SASC-SOCIETY
//! Implementação completa de INV-2 (Auditabilidade via Entropia)

use vajra_entropy_monitor::{
    VajraEntropyMonitor, EntropyPhase, OverloadAlert, VajraReport,
};
use blake3::Hasher;
use pqcrypto_dilithium::dilithium5::PublicKey;
use pqcrypto_traits::sign::PublicKey as _;
use serde::{Serialize, Deserialize};
use thiserror::Error;

#[derive(Error, Debug)]
pub enum BridgeError {
    #[error("Coherence collapse iminente: {risk:.3}")]
    CollapseImminent { risk: f64 },
    #[error("Fase desordenada detectada")]
    DisorderedPhase,
    #[error("Vajra desconectado")]
    VajraOffline,
}

#[derive(Serialize, Deserialize, Clone)]
pub struct SecuredMetadata {
    pub vajra_report: VajraReport,
    pub blake3_delta2: [u8; 32],
    pub cognitive_load: f64,
    pub phase: String,
}

/// Gate 5: Validação de Entropia Cognitiva
pub async fn assess_with_vajra(
    request_payload: &[u8],
    requestor_pubkey: &PublicKey,
    session_id: &str,
) -> Result<SecuredMetadata, BridgeError> {

    // Derivação BLAKE3-Δ2 (Memory ID 18)
    let mut hasher = Hasher::new_derive_key("sasc_v30_15_omega");
    hasher.update(request_payload);
    hasher.update(requestor_pubkey.as_bytes());
    hasher.update(session_id.as_bytes());
    let delta2_hash = hasher.finalize();

    // Inicializar Vajra com contexto oncológico
    let vajra = VajraEntropyMonitor::new_with_config(
        "oncológico_pediatrico_cluster",
        vajra_entropy_monitor::Config {
            hilbert_dim: 2048,
            fidelity_threshold: 0.9997, // Memory ID 11
            overload_threshold: 0.85,
            panic_threshold: EntropyPhase::Disordered,
        },
    ).map_err(|_| BridgeError::VajraOffline)?;

    // Calcular carga cognitiva (Memory ID 3, Eq. 1-4)
    let report = vajra.assess_cognitive_load(
        request_payload,
        Some(delta2_hash.as_bytes().to_vec()),
        Some(session_id.to_string()),
    ).map_err(|_| BridgeError::VajraOffline)?;

    // Gate 5: Verificar fase de entropia
    match report.phase {
        EntropyPhase::Disordered => {
            // Enviar alerta para KARNAK Sealer (Memory ID 4)
            let alert = OverloadAlert {
                coherence_collapse_risk: report.coherence_collapse_probability,
                recommended_action: "Hard freeze e isolamento de processos".to_string(),
                affected_session: session_id.to_string(),
            };

            // Escalar para Prince via gRPC
            if let Err(e) = send_karnak_alert(alert).await {
                eprintln!("KARNAK alert failed: {}", e);
            }

            return Err(BridgeError::CollapseImminent {
                risk: report.coherence_collapse_probability
            });
        }
        EntropyPhase::Ordered => {
            // Coerência confirmada, prosseguir
            log::info!("Vajra Gate 5: ✓ EntropyPhase::Ordered (Φ = {})", report.coherence_score);
        }
    }

    let phase_str = format!("{:?}", report.phase);
    let cognitive_load = report.cognitive_load;

    // Retornar metadata estendida
    Ok(SecuredMetadata {
        vajra_report: report,
        blake3_delta2: *delta2_hash.as_bytes(),
        cognitive_load,
        phase: phase_str,
    })
}

/// Envia alerta para KARNAK Sealer (invoca isolamento)
async fn send_karnak_alert(_alert: OverloadAlert) -> Result<(), Box<dyn std::error::Error>> {
    Ok(())
}
